[package]
name = "stickyhabits"
version = "1.0.0"
authors = ["Roman Zajic <zajic@zajic.net>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.1.1"
uint = { version = "0.9.4", default-features = false }
sha256 = "1.1.1"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
